--- a/config_default.ini
+++ b/config_default.ini
@@ -1,6 +1,8 @@
-[main]
-MQTT_HOSTNAME = <MQTT_HOSTNAME>
+[mqtt]
+MQTT_HOSTNAME = "MQTT_HOSTNAME"
 MQTT_PORT = 1883
 MQTT_TIMEOUT = 60
+
+[block]
 BLOCK_TIMEOUT = 60
 BLOCK_UDP_PORT = 7878
