--- a/config_default.ini
+++ b/config_default.ini
@@ -1,8 +1,9 @@
 [mqtt]
-MQTT_HOSTNAME = "MQTT_HOSTNAME"
+MQTT_HOSTNAME = <MQTT_HOSTNAME>
 MQTT_PORT = 1883
 MQTT_TIMEOUT = 60
 
 [block]
 BLOCK_TIMEOUT = 60
 BLOCK_UDP_PORT = 7878
+SCALE = F
