Add mqtt options add meat table option

--- a/config_default.ini
+++ b/config_default.ini
@@ -2,8 +2,12 @@
 MQTT_HOSTNAME = <MQTT_HOSTNAME>
 MQTT_PORT = 1883
 MQTT_TIMEOUT = 60
+MQTT_USEAUTH = False
+MQTT_USERNAME = <USERNAME>
+MQTT_PASSWORD = <PASSWORD>
 
 [block]
 BLOCK_TIMEOUT = 60
 BLOCK_UDP_PORT = 7878
 SCALE = F
+MEAT_TABLE_FILE = meat_table.txt
