--- a/config_default.ini
+++ b/config_default.ini
@@ -9,5 +9,9 @@ MQTT_PASSWORD = <PASSWORD>
 [block]
 BLOCK_TIMEOUT = 60
 BLOCK_UDP_PORT = 7878
+
+# C for celciss, F for fahrenheit
 SCALE = F
+
+# use meat_table.txt or meat_table_long.txt
 MEAT_TABLE_FILE = meat_table.txt
