--- a/config_default.ini
+++ b/config_default.ini
@@ -10,7 +10,7 @@ MQTT_PASSWORD = <PASSWORD>
 BLOCK_TIMEOUT = 60
 BLOCK_UDP_PORT = 7878
 
-# C for celciss, F for fahrenheit
+# C for celcius, F for fahrenheit
 SCALE = F
 
 # use meat_table.txt or meat_table_long.txt
