Check ENV for variables for docker container add MQTT_ZERO_OUT for probe 1 on blockOff show error status for mqtt disconnect

--- a/config_default.ini
+++ b/config_default.ini
@@ -5,6 +5,7 @@ MQTT_TIMEOUT = 60
 MQTT_USEAUTH = False
 MQTT_USERNAME = <USERNAME>
 MQTT_PASSWORD = <PASSWORD>
+MQTT_ZERO_OUT = False
 
 [block]
 BLOCK_TIMEOUT = 60
